# X_Exchange

./: .gitignore  README.md  patch_dashboard.js  patch_eslint.js  patch_eslint2.js  patch_tradingchart.js  patch_tradingchart2.js  patch_tradingchart_lightweight.js  patch_tradingchart_tvjs.js  render.yaml  start.sh  test_tv.html
backend/: Cargo.toml
backend/migrations/: 20260323145424_init.sql  20260324000000_add_order_queue_ahead.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/engine/: mod.rs
backend/src/market/: binance.rs
backend/src/models/: mod.rs
backend/src/routes/: api.rs  ws.rs
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: OrderBook.tsx  TradingChart.tsx
frontend/src/context/: MarketContext.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.d.ts
